
081106	In procs.c: allow process names in double quotes, e.g.
	"Ulric fibbar.exe" 1 2
	Released 0.17.0

080130	More debugging code in msgs.c.

080122	Fixed a bug in the memory debugging code.
	Released 0.16.1.

071211	Added new filtering rule for messages: perform action based on
	log name. Example:
	ignore log Application
	Released 0.16.0.

070824	Updated ext_test.c to allow tests to be performed on behalf of
	other machines. This is done by specifying the file name as
	machine,example,com.test.

070227	Added a bit of debugging to disk.c.

070118	New debugging option memsize.
	Bugfix: the information eventlog type was not handled at all.
	Completely eradicated all use of snprintf and strlcat.
	Released 0.14.0.

061212	Several changes in mrbig.c to run better on Longhorn.
	Released 0.13.4.

061205	In cpu.c: replaced GlobalMemoryStatus with GlobalMemoryStatusEx.
	Released 0.13.3.

061123	More specific error messages from winsock code. Specifically
	WSAGetLastError() is included in each mrlog call.
	Released 0.13.2.

061121	New mrbig.cfg option to set debug level:
	debug N
	Released 0.13.1.

061116	Massive rewrite of mrsend et al to implement grace periods
	for alarms that shouldn't fire until after som time.
	New configuration option:
	gracetime <test> <time>
	E.g.
	gracetime cpu 600
	Released 0.13.0.

061031	Don't sleep in mrsend when nothing has been sent to the bbd.
	Reduce sleep time to 5 seconds.
	disk.c: Include alert thresholds in report.

051206	Alarm when memory usage exceeds memred or memyellow percent.

051121	When sending reports to several displays, sleep for 10
	seconds between each.
	Released 0.10.0.

051111	Terminate each report with \n\0 rather than \n. This is
	what Quest's client does.

051025	Always sleep at least SLEEP_MIN seconds between loops.


050712	Added buffer overrun detection to big_malloc et al.

050708	Handle unexpected time changes rationally. Released 0.8.1.

050707	mrbig.c: new function insert_status keeps track of changes