@@ -1,0 +1,5 @@
+
+VPATH=..
+CC=/usr/local/mingw-w64/bin/x86_64-pc-mingw32-gcc
+include ../Makefile
+
