@@ -1,0 +1,5 @@
+
+VPATH=..
+CC=i586-mingw32msvc-gcc
+include ../Makefile
+
